--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JwtKey": "1234567890123456",
+  "audience": "Carwash",
+  "issuer": "Carwash-wed-App",
+  "JwtAudience": "Bond",
+  "JwtExpireDays": 1,
   "AllowedHosts": "*"
-}
+}                                                              
