--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,35 @@
 {
+  "Secret": "testnaja",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+
+    "Logging": {
+      "IncludeScopes": false,
+      "Debug": {
+        "LogLevel": {
+          "Default": "Warning"
+        }
+      },
+      "Console": {
+        "LogLevel": {
+          "Default": "Warning"
+        }
+      }
     }
   },
+  "JwtKey": "1234567890123456",
+  "audience": "Carwash",
+  "issuer": "Carwash-wed-App",
+  "JwtAudience": "Bond",
+  "JwtExpireDays": 1,
+  "ConnectionStrings": {
+    "AzureStrageConnctionString": "UseDevelopmentStorage=true"
+  },
   "AllowedHosts": "*"
+
+
 }
