--- a/CarWash.csproj
+++ b/CarWash.csproj
@@ -37,6 +37,10 @@
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.5" />
     <PackageReference Include="Microsoft.Azure.Storage.Common" Version="11.1.5" />
     <PackageReference Include="Microsoft.Azure.Storage.File" Version="11.1.5" />
+    <PackageReference Include="Microsoft.Build.Tasks.Git" Version="1.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
@@ -75,7 +79,6 @@
   <ItemGroup>
     <Folder Include="NewFolder\" />
     <Folder Include="wwwroot\images\FirebaseFiles\" />
-    <Folder Include="wwwroot\image\" />
   </ItemGroup>
 
 </Project>
