--- a/CarWash.csproj
+++ b/CarWash.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Azure.Storage.Blobs.Batch" Version="12.2.1" />
     <PackageReference Include="FirebaseAuthentication.net" Version="3.4.0" />
     <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
+    <PackageReference Include="GitHub" Version="1.24.0" />
     <PackageReference Include="ImageProcessor" Version="2.9.0" />
     <PackageReference Include="ImageProcessor.Plugins.WebP" Version="1.3.0" />
     <PackageReference Include="JWT" Version="6.1.4" />
@@ -60,12 +61,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Utils" Version="3.1.1" />
     <PackageReference Include="MySql.Data" Version="8.0.19" />
+    <PackageReference Include="runtime.linux-x64.CoreCompat.System.Drawing" Version="1.0.0-beta009" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-rc0001" />
     <PackageReference Include="Stripe.net" Version="36.8.1" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.1" />
     <PackageReference Include="Tinify" Version="1.5.2" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -77,8 +78,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="NewFolder\" />
-    <Folder Include="wwwroot\images\FirebaseFiles\" />
+    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\images\FirebaseFilesV1\" />
   </ItemGroup>
 
 </Project>
