--- a/CarWash.csproj
+++ b/CarWash.csproj
@@ -21,22 +21,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Storage.Blobs.Batch" Version="12.2.1" />
     <PackageReference Include="FirebaseAuthentication.net" Version="3.4.0" />
     <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
-    <PackageReference Include="ImageProcessor" Version="2.9.0" />
-    <PackageReference Include="ImageProcessor.Plugins.WebP" Version="1.3.0" />
     <PackageReference Include="JWT" Version="6.1.4" />
     <PackageReference Include="LazZiya.ImageResize" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Azure.ConfigurationManager" Version="4.0.0" />
-    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.5" />
-    <PackageReference Include="Microsoft.Azure.Storage.Common" Version="11.1.5" />
-    <PackageReference Include="Microsoft.Azure.Storage.File" Version="11.1.5" />
     <PackageReference Include="Microsoft.Build.Tasks.Git" Version="1.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -49,19 +43,15 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.3" />
     <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="6.5.1" />
-    <PackageReference Include="Microsoft.Owin.Cors" Version="3.0.1" />
-    <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="4.1.0" />
-    <PackageReference Include="Microsoft.Owin.Security.OAuth" Version="4.1.0" />
-    <PackageReference Include="Microsoft.PowerBI.Core" Version="1.1.11" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Utils" Version="3.1.1" />
     <PackageReference Include="MySql.Data" Version="8.0.19" />
     <PackageReference Include="runtime.linux-x64.CoreCompat.System.Drawing" Version="1.0.0-beta009" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-rc0001" />
+    <PackageReference Include="SocketIOClient" Version="2.0.2" />
     <PackageReference Include="Stripe.net" Version="36.8.1" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.1" />
-    <PackageReference Include="Tinify" Version="1.5.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -74,7 +64,6 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
-    <Folder Include="wwwroot\images\FirebaseFilesV1\" />
   </ItemGroup>
 
 </Project>
