--- a/CarWash.csproj
+++ b/CarWash.csproj
@@ -77,6 +77,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Api\Account\Models\" />
+    <Folder Include="Areas\Api\Job\Controller\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
