Web Service Api LongDo Map Coordinate Conversion

--- a/CarWash.csproj
+++ b/CarWash.csproj
@@ -23,6 +23,9 @@
   <ItemGroup>
     <PackageReference Include="FirebaseAuthentication.net" Version="3.4.0" />
     <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
+    <PackageReference Include="GeoCoordinate" Version="2.0.1" />
+    <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
+    <PackageReference Include="IpGeoLocation.IpGeoLocation" Version="1.0.5" />
     <PackageReference Include="JWT" Version="6.1.4" />
     <PackageReference Include="LazZiya.ImageResize" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.1" />
